--- a/prj0/pages/index/index.wxml
+++ b/prj0/pages/index/index.wxml
@@ -1,23 +1,31 @@
 <!--index.wxml-->
-<view class="container" bindtap="change_to_main">
-  <view class="userinfo">
+<view class="container">
+  <!--<view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
     <block wx:else>
       <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     </block>
-  </view>
+  </view>  -->
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
-  <view class="infotext" >
+  <view class="infotext">
     <text class="infotext">{{info[2]}}</text>
   </view>
+
   <view>
     <text class="normaltext">{{info[0]}}</text>
   </view>
   <view>
     <text class="normaltext">{{info[1]}}</text>
   </view>
-  
 </view>
+<view class='bt'>
+    <view>
+    <button class='button' bindtap="change_to_main">经典</button>
+    </view>
+    <view>
+    <button class='button' bindtap="change_to_main2">困难</button>
+    </view>
+  </view>
