--- a/prj0/pages/index/index.wxss
+++ b/prj0/pages/index/index.wxss
@@ -33,3 +33,14 @@
   font-size: 20px;
   color: dimgrey;
 }
+
+.bt{
+  flex-direction:row;
+  position: relative;
+  top: 10rpx;
+  left: 0rpx;
+}
+
+.button{
+  size:mini;
+}
